added more files .scss files into 03-pages directory

--- a/scss/01-components/_header.scss
+++ b/scss/01-components/_header.scss
@@ -1,15 +1,5 @@
 .header {
-	
-	&.header-primary {
-		color: #FFF;
-	}
-
-	&.header-default {
-		color: $grey;
-
-		span {
-			color: $primary; 
-		}
-	}
-
+	&.header-default {}
+	&.header-primary {}
+	&.header-secondary {}
 }
