--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,44 +1,17 @@
-/* Base
-The base directory contains styles that help start a project. The base 
-directory could contain the following type of SASS files 							*/
-@import "04-base/settings"; 
-@import "04-base/fonts"; 
-@import "04-base/helpers";     
-@import "04-base/animations"; 
+/* 01. Base */
+@import "01-base/settings"; 
+@import "01-base/fonts"; 
+@import "01-base/helpers";
+@import "01-base/animations"; 
           
-
-/* Partials
-The partials directory will probably contain the bulk of your SASS files. 
-A page may consist of multiple partials and should be styled individually. 
-These partials may include files like:
-	--Header 
-	--Footer
-	--Navigation 
-	--Content Block 												  				*/
+/* 02. Partials */
 @import "02-partials/footer";
-@import "02-partials/header";
+@import "02-partials/head";
 
-/* Components
-For smaller components, there is the components. 
-While partials/ and pages/ is kind of macro (defining the global wireframe), components/ 
-is more micro. It can contain all kinds of specific modules like a slider, a loader, 
-a widget, or anything along those lines. There are usually a lot of files in components/ 
-since your site is should be mostly composed of tiny modules.
-	--Media
-	--Carousel
-	--Section
-	--Accordion												  						*/
-@import "01-components/global"; /* Smaller components */
-@import "01-components/header";
+/* 03. Components */
+@import "03-components/tiny";
+@import "03-components/header";
 
-
-/* Pages 
-If you have page-specific styles, I think it’s cool to put them in a pages/ folder and in a 
-file named after the page. For example, it’s not uncommon to have very specific styles for 
-the home page, so you’d have a _home.scss file in pages/ dealing with this. 
-    --Home
-	--Article
-	--Blog
-	--Contact																		*/
-@import "03-pages/home";
-@import "03-pages/contact";
+/* 04. Pages */
+@import "04-pages/home";
+@import "04-pages/contact";
