dropped a few pages, added 404 and about

--- a/scss/01-components/_header.scss
+++ b/scss/01-components/_header.scss
@@ -1,5 +1,5 @@
-.header {
-	&.header-default {}
-	&.header-primary {}
-	&.header-secondary {}
+.heading {
+	&.heading-default {}
+	&.heading-primary {}
+	&.heading-secondary {}
 }
