--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,14 +2,15 @@
 @import "01-base/settings"; 
 @import "01-base/fonts"; 
 @import "01-base/helpers";
-@import "01-base/animations"; 
+@import "01-base/animations";
+@import "01-base/IE9"; 
           
-/* 02. Partials */
+/* 02. Partials/Layout */
 @import "02-partials/footer";
 @import "02-partials/navigation";
 
 /* 03. Components */
-@import "03-components/tiny";
+@import "03-components/tiny"; // Very small components
 @import "03-components/heading";
 @import "03-components/section";
 
